@@ -3,6 +3,7 @@ Revision history for WWW-Scraper-ISBN-WordPower_Driver
 
         - added git repository links to metadata.
         - fixed distribution name in metadata.
+        - upgrade to WWW-Scraper-ISBN-1.00.
 
 0.06    2013-03-10
         - added isbn-check.pl to examples.
